force-app/main/default/objects/CoIT_RepairPlan__c/CoIT_RepairPlan__c.object-meta.xml
<CustomObject>
    <label>CoIT_RepairPlan</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>RepairPlanID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CoIT_RepairPlans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>