force-app/main/default/objects/CoIT_RepairPlan__c/fields/Estimated_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_Days__c</fullName>
    <label>Estimated Duration (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>