force-app/main/default/objects/CoIT_RepairPlan__c/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>CoIT_RepairPlans</relationshipLabel>
    <relationshipName>CoIT_RepairPlans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>