force-app/main/default/objects/CoIT_RepairPlan__c/fields/Repair_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Repair_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>CoIT_RepairPlans (Repair Work Order)</relationshipLabel>
    <relationshipName>CoIT_RepairPlans1</relationshipName>
    <type>Lookup</type>
</CustomField>