force-app/main/default/objects/CoIT_RepairPlan__c/fields/Repair_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Repair_Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>CoIT_RepairPlans</relationshipLabel>
    <relationshipName>CoIT_RepairPlans</relationshipName>
    <type>Lookup</type>
</CustomField>