force-app/main/default/objects/CoIT_RepairPlan__c/fields/Work_Type_Required__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Required__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Type Required</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>CoIT_RepairPlans</relationshipLabel>
    <relationshipName>CoIT_RepairPlans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>